cluster/gitops/system-controllers/fstrim/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fstrim
specs:
  - description: fstrim
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: fstrim
    # Block everything - network access not required or desired.
    egress:
      - {}
    ingress:
      - {}
